solc_ossfuzz_seed_corpus/test_sol/test_e9b8a7ca2fe466aa9934d2b16a3928e3c57f664c58ac80a0b3d6cfa7d2c076ba_ef251fafe18514d7a32175d6b43faddee6e83439_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
struct St0 {
  function (bytes memory) external   returns (function () external  ) el0;
  bool el1;
}
function f0()     returns(bytes memory o0)
{
  assembly
  {
    returndatacopy(add(0x80, mod(o0, 1024)), 0, mod(o0, 1024))
    function af0(ai0, ai1, ai2, ai3, ai4, ai5, ai6, ai7, ai8, ai9, ai10, ai11, ai12, ai13, ai14) -> ao0, ao1, ao2, ao3, ao4, ao5, ao6, ao7
    {
      for 
      { let yulinit0 := 0 } lt(yulinit0, mod(0, 11)) { yulinit0 := add(yulinit0, 1) }
      {
        ao2 := mload(add(0x80, mod(o0, 1024)))
      }
    }
    calldatacopy(add(0x80, mod(o0, 1024)), 115792089237316195423570985008687907853269984665640564039457584007913129639935, mod(mload(add(0x80, mod(o0, 1024))), 1024))
  }
  bytes19 l0 = bytes19(0xf6a0fc03141065f0d155d9b36b65911bedb4f9);
}
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39,
  M40, M41, M42, M43, M44, M45, M46, M47,
  M48, M49, M50, M51, M52, M53, M54, M55,
  M56, M57, M58, M59, M60, M61, M62, M63,
  M64, M65, M66, M67, M68, M69, M70, M71,
  M72, M73, M74, M75, M76, M77, M78, M79,
  M80, M81, M82, M83, M84, M85, M86, M87,
  M88, M89, M90, M91, M92, M93, M94, M95,
  M96, M97, M98, M99, M100, M101, M102, M103,
  M104, M105, M106, M107, M108, M109, M110, M111,
  M112, M113, M114, M115, M116, M117
}
library L0 {
  function f1(function (uint16, uint104[][9][9] memory, bytes memory) external   returns (EN0, bool, uint136) i0) public    returns(address payable o0,int72[][10] memory o1,bytes3 o2)
  {
  }
  function f2(uint256 i0,function (function (bool, bool, int88[][] memory) external  ) external   returns (uint192[10] memory, uint248) i1) private    returns(function (bytes30) external   returns (function (int208, function (bool, address payable) external   returns (bool, EN0[2][][1][][] memory)) external   returns (int168, address), bool) o0)
  {
    bool l0 = (true == false);
    unchecked {
    }
  }
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
// ----
// DeclarationError 6578: (su0.sol:536-538): Cannot access local Solidity variables from inside an inline assembly function.
